--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "mobx": "^6.13.5",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
@@ -54,7 +55,7 @@
     ]
   },
   "overrides": {
-	"@types/react": "$@types/react",
+    "@types/react": "$@types/react",
     "@types/react-dom": "$@types/react-dom"
   }
 }
